<resources>
    <string name="app_name">WhatDayIsToday</string>
    <string name="navigation_Calendar">달력</string>
    <string name="navigation_Community">커뮤니티</string>
    <string name="navigation_CreateTeam">만든이</string>

    <string name="week_sun">SUN</string>
    <string name="week_mon">MON</string>
    <string name="week_tue">TUE</string>
    <string name="week_wed">WED</string>
    <string name="week_thu">THU</string>
    <string name="week_fri">FRI</string>
    <string name="week_sat">SAT</string>
</resources>
