<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="vm" type="com.sandorln.whatdayistoday.viewmodel.CalendarMainVM"/>
        <variable name="act" type="com.sandorln.whatdayistoday.view.calendar.CalendarMainFragment"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <!-- WEEK Title -->
        <LinearLayout
                android:id="@+id/week_title"
                android:orientation="horizontal"
                android:weightSum="7"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/rc_calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:textColor="@color/colorSUN"
                    style="@style/f_calendar_week"
                    android:text="@string/week_sun"/>
            <TextView
                    style="@style/f_calendar_week"
                    android:text="@string/week_mon"/>
            <TextView
                    style="@style/f_calendar_week"
                    android:text="@string/week_tue"/>
            <TextView
                    style="@style/f_calendar_week"
                    android:text="@string/week_wed"/>
            <TextView
                    style="@style/f_calendar_week"
                    android:text="@string/week_thu"/>
            <TextView
                    style="@style/f_calendar_week"
                    android:text="@string/week_fri"/>
            <TextView
                    android:textColor="@color/colorSAT"
                    style="@style/f_calendar_week"
                    android:text="@string/week_sat"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_calendar"
                app:layout_constraintTop_toBottomOf="@+id/week_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>